Update ember select z-index to ensure visiblity on modals

--- a/assets/stylesheets/bookingsync/_ember-power-select.scss
+++ b/assets/stylesheets/bookingsync/_ember-power-select.scss
@@ -125,3 +125,7 @@ html .ember-power-select-option[aria-selected="true"] {
     cursor: default;
   }
 }
+
+html .ember-basic-dropdown-content {
+  z-index: 2000;
+}
